--- a/widgets_app/pubspec.yaml
+++ b/widgets_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^11.1.4
   animate_do: ^3.1.2
+  flutter_riverpod: ^2.4.3
 
 dev_dependencies:
   flutter_test:
